added extensions, oracle server jre, cleaned things up