@@ -1,4 +1,4 @@
-FROM tomcat:8.0-jre8
+FROM tomcat:8.5
 MAINTAINER Tim Sutton<tim@kartoza.com>
 
 RUN  dpkg-divert --local --rename --add /sbin/initctl
@@ -14,12 +14,16 @@ ADD 71-apt-cacher-ng /etc/apt/apt.conf.d/71-apt-cacher-ng
 
 ENV GS_VERSION 2.9.2
 ENV GEOSERVER_DATA_DIR /opt/geoserver/data_dir
+ENV GEOSERVER_OPTS "-Djava.awt.headless=true -server -Xms2G -Xmx4G -Xrs -XX:PerfDataSamplingInterval=500 -XX:MaxPermSize=512m -Dorg.geotools.referencing.forceXY=true -XX:SoftRefLRUPolicyMSPerMB=36000 -XX:+UseParallelGC -XX:NewRatio=2"  
+ENV JAVA_OPTS "$JAVA_OPTS $GEOSERVER_OPTS"
+ENV GDAL_DATA /usr/local/gdal_data
+ENV LD_LIBRARY_PATH /usr/local/gdal_native_libs
 
 RUN mkdir -p $GEOSERVER_DATA_DIR
 
 # Unset Java related ENVs since they may change with Oracle JDK
-ENV JAVA_VERSION=
-ENV JAVA_DEBIAN_VERSION=
+ENV JAVA_VERSION
+ENV JAVA_DEBIAN_VERSION
 
 # Set JAVA_HOME to /usr/lib/jvm/default-java and link it to OpenJDK installation
 RUN ln -s /usr/lib/jvm/java-8-openjdk-amd64 /usr/lib/jvm/default-java
@@ -27,49 +31,33 @@ ENV JAVA_HOME /usr/lib/jvm/default-java
 
 ADD resources /tmp/resources
 
-# If a matching Oracle JDK tar.gz exists in /tmp/resources, move it to /var/cache/oracle-jdk8-installer
-# where oracle-java8-installer will detect it
-RUN if ls /tmp/resources/*jdk-*-linux-x64.tar.gz > /dev/null 2>&1; then \
-      mkdir /var/cache/oracle-jdk8-installer && \
-      mv /tmp/resources/*jdk-*-linux-x64.tar.gz /var/cache/oracle-jdk8-installer/; \
-    fi;
-
-# Install Oracle JDK (and uninstall OpenJDK JRE) if the build-arg ORACLE_JDK = true or an Oracle tar.gz
-# was found in /tmp/resources
-ARG ORACLE_JDK=false
-RUN if ls /var/cache/oracle-jdk8-installer/*jdk-*-linux-x64.tar.gz > /dev/null 2>&1 || [ "$ORACLE_JDK" = true ]; then \
-       apt-get autoremove --purge -y openjdk-8-jre-headless && \
-       echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true \
-         | debconf-set-selections && \
-       echo "deb http://ppa.launchpad.net/webupd8team/java/ubuntu xenial main" \
-         > /etc/apt/sources.list.d/webupd8team-java.list && \
-       apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys EEA14886 && \
-       rm -rf /var/lib/apt/lists/* && \
-       apt-get update && \
-       apt-get install -y oracle-java8-installer oracle-java8-set-default && \
-       ln -s --force /usr/lib/jvm/java-8-oracle /usr/lib/jvm/default-java && \
-       rm -rf /var/lib/apt/lists/* && \
-       rm -rf /var/cache/oracle-jdk8-installer; \
+#Install Oracle JRE
+RUN if ls /tmp/resources/*jre-*-linux-x64.tar.gz > /dev/null 2>&1; then \
+      rm /usr/lib/jvm/default-java && \
+      mkdir /usr/lib/jvm/default-java && \
+      tar zxvf /tmp/resources/*jre-*-linux-x64.tar.gz --strip-components=1 -C /usr/lib/jvm/default-java && \
+      apt-get autoremove --purge -y openjdk-8-jre-headless; \
        if [ -f /tmp/resources/jce_policy.zip ]; then \
          unzip -j /tmp/resources/jce_policy.zip -d /tmp/jce_policy && \
          mv /tmp/jce_policy/*.jar $JAVA_HOME/jre/lib/security/; \
        fi; \
     fi;
+RUN ls -l /usr/lib/jvm/default-java/jre/lib/security
 
 #Add JAI and ImageIO for great speedy speed.
-WORKDIR /tmp
-RUN wget http://download.java.net/media/jai/builds/release/1_1_3/jai-1_1_3-lib-linux-amd64.tar.gz && \
-    wget http://download.java.net/media/jai-imageio/builds/release/1.1/jai_imageio-1_1-lib-linux-amd64.tar.gz && \
+WORKDIR /tmp/resources
+RUN if [ ! -f jai-1_1_3-lib-linux-amd64.tar.gz ]; then \
+    wget http://download.java.net/media/jai/builds/release/1_1_3/jai-1_1_3-lib-linux-amd64.tar.gz; \
+    fi; \
+    if [ ! -f jai_imageio-1_1-lib-linux-amd64.tar.gz ]; then \
+    wget http://download.java.net/media/jai-imageio/builds/release/1.1/jai_imageio-1_1-lib-linux-amd64.tar.gz; \
+    fi; \
     gunzip -c jai-1_1_3-lib-linux-amd64.tar.gz | tar xf - && \
     gunzip -c jai_imageio-1_1-lib-linux-amd64.tar.gz | tar xf - && \
-    mv /tmp/jai-1_1_3/lib/*.jar $JAVA_HOME/jre/lib/ext/ && \
-    mv /tmp/jai-1_1_3/lib/*.so $JAVA_HOME/jre/lib/amd64/ && \
-    mv /tmp/jai_imageio-1_1/lib/*.jar $JAVA_HOME/jre/lib/ext/ && \
-    mv /tmp/jai_imageio-1_1/lib/*.so $JAVA_HOME/jre/lib/amd64/ && \
-    rm /tmp/jai-1_1_3-lib-linux-amd64.tar.gz && \
-    rm -r /tmp/jai-1_1_3 && \
-    rm /tmp/jai_imageio-1_1-lib-linux-amd64.tar.gz && \
-    rm -r /tmp/jai_imageio-1_1
+    mv jai-1_1_3/lib/*.jar $JAVA_HOME/jre/lib/ext/ && \
+    mv jai-1_1_3/lib/*.so $JAVA_HOME/jre/lib/amd64/ && \
+    mv jai_imageio-1_1/lib/*.jar $JAVA_HOME/jre/lib/ext/ && \
+    mv jai_imageio-1_1/lib/*.so $JAVA_HOME/jre/lib/amd64/
 WORKDIR $CATALINA_HOME
 
 # A little logic that will fetch the geoserver war zip file if it
@@ -81,6 +69,7 @@ RUN if [ ! -f /tmp/resources/geoserver.zip ]; then \
     unzip /tmp/resources/geoserver.zip -d /tmp/geoserver \
     && unzip /tmp/geoserver/geoserver.war -d $CATALINA_HOME/webapps/geoserver \
     && rm -rf $CATALINA_HOME/webapps/geoserver/data \
+    && rm -f $CATALINA_HOME/webapps/geoserver/data/WEB-INF/lib/jai_core-*jar $CATALINA_HOME/webapps/geoserver/data/WEB-INF/lib/jai_imageio-*.jar $CATALINA_HOME/webapps/geoserver/data/WEB-INF/lib/jai_codec-*.jar \
     && rm -rf /tmp/geoserver
 
 # Install any plugin zip files in resources/plugins
@@ -90,7 +79,15 @@ RUN if ls /tmp/resources/plugins/*.zip > /dev/null 2>&1; then \
         && mv /tmp/gs_plugin/*.jar $CATALINA_HOME/webapps/geoserver/WEB-INF/lib/ \
         && rm -rf /tmp/gs_plugin; \
       done; \
-    fi
+    fi; \
+    if ls /tmp/resources/plugins/*gdal*.tar.gz > /dev/null 2>&1; then \
+    mkdir /usr/local/gdal_data && mkdir /usr/local/gdal_native_libs; \
+    unzip /tmp/resources/plugins/gdal/gdal-data.zip -d /usr/local/gdal_data && \
+    tar xzf /tmp/resources/plugins/gdal192-Ubuntu12-gcc4.6.3-x86_64.tar.gz -C /usr/local/gdal_native_libs; \
+    fi;
+#TODO
+#install http://docs.geoserver.org/2.9.2/user/extensions/libjpeg-turbo/index.html#community-libjpeg-turbo
+#install Apache Tomcat Native library
 
 # Overlay files and directories in resources/overlays if they exist
 RUN rm -f /tmp/resources/overlays/README.txt && \
